Fixed display bug in brand ribbon
Max-height added to prevent the image becoming too large

--- a/includes/css/styleLarge.css
+++ b/includes/css/styleLarge.css
@@ -532,6 +532,7 @@ footer {
 .brandribbon a img {
     /* Positioning */
     max-width: 100%;
+    max-height: 100px;
 }
 
 .order_products table {
