--- a/includes/css/styleMedium.css
+++ b/includes/css/styleMedium.css
@@ -494,6 +494,7 @@ footer {
 .brandribbon a img {
     /* Positioning */
     max-width: 100%;
+    max-height: 100px;
 }
 
 .order_products table {
