--- a/includes/css/styleMobile.css
+++ b/includes/css/styleMobile.css
@@ -426,6 +426,7 @@ footer {
 .brandribbon a img {
     /* Positioning */
     max-width: 100%;
+    max-height: 100px;
 }
 
 .order_products table {
